--- a/css/About.css
+++ b/css/About.css
@@ -1,93 +1,94 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: Century Gothic;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Century Gothic;
 }
 
-header{
-	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../pic/33.jpg);
-	height: 100vh;
-	background-size: cover;
-	background-position: center;
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../pic/33.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
 }
 
-ul{
-	list-style-type: none;
-	float: right;
-	margin-top: 25px;
+ul {
+  list-style-type: none;
+  float: right;
+  margin-top: 25px;
 }
 
-ul li{
-	display: inline-block;
+ul li {
+  display: inline-block;
 }
 
-ul li a{
-	text-decoration: none;
-	color: #fff;
-	padding: 5px 20px;
-	border: 1px solid transparent;
-	transition: 0.6s;
+ul li a {
+  text-decoration: none;
+  color: #fff;
+  padding: 5px 20px;
+  border: 1px solid transparent;
+  transition: 0.6s;
 }
 
-ul li  :hover{
-	background-color: #fff;
-	color: #000;
+ul li :hover {
+  background-color: #fff;
+  color: #000;
 }
 
 ul li.active a {
-	background-color: #fff;
-	color: #000;
+  background-color: #fff;
+  color: #000;
 }
 
-.logo img{
-	float: left;
-	width: 150px;
-	height: auto;
-	margin-top: 25px;
+.logo img {
+  float: left;
+  width: 150px;
+  height: auto;
+  margin-top: -25px;
 }
 
-.main{
-	max-width: 1200px;
-	margin: auto;
-	font-size: 20px;
+.main {
+  max-width: 1200px;
+  margin: auto;
+  font-size: 20px;
 }
 
-.title   {
-	 
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	
+.title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.title{
-	color: #fff;
-	font-size: 20px;
+.title {
+  color: #fff;
+  font-size: 20px;
 }
 
-p{ 
-text-align: center
- }
+p {
+  text-align: center;
+}
 
 h1 {
- text-align: center
-  
+  text-align: center;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
+p {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  font-size: medium;
+}
+body {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  align-items: center;
+  background: cornsilk;
+}
+footer {
+  font-size: 15px;
+  text-align: center;
+  color: rgb(108, 66, 4);
+  background-color: rgba(204, 100, 30, 0.544);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
