--- a/css/Music.css
+++ b/css/Music.css
@@ -1,176 +1,154 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: Century Gothic;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Century Gothic;
 }
 
-header{
-	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../pic/20.jpg);
-	height: 260vh;
-	background-size: cover;
-	background-position: center;
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../pic/20.jpg);
+  height: 260vh;
+  background-size: cover;
+  background-position: center;
 }
 
-ul{
-	list-style-type: none;
-	float: right;
-	margin-top: 25px;
+ul {
+  list-style-type: none;
+  float: right;
+  margin-top: 25px;
 }
 
-ul li{
-	display: inline-block;
+ul li {
+  display: inline-block;
 }
 
-ul li a{
-	text-decoration: none;
-	color: #fff;
-	padding: 5px 20px;
-	border: 1px solid transparent;
-	transition: 0.6s;
+ul li a {
+  text-decoration: none;
+  color: #fff;
+  padding: 5px 20px;
+  border: 1px solid transparent;
+  transition: 0.6s;
 }
 
-ul li  :hover{
-	background-color: #fff;
-	color: #000;
+ul li :hover {
+  background-color: #fff;
+  color: #000;
 }
 
 ul li.active a {
-	background-color: #fff;
-	color: #000;
+  background-color: #fff;
+  color: #000;
 }
 
-.logo img{
-	float: left;
-	width: 150px;
-	height: auto;
-	margin-top: 25px;
+.logo img {
+  float: left;
+  width: 150px;
+  height: auto;
+  margin-top: 25px;
 }
 
-.main{
-	max-width: 1200px;
-	margin: auto;
-	font-size: 20px;
+.main {
+  max-width: 1200px;
+  margin: auto;
+  font-size: 20px;
 }
 
-.title { 
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	
+.title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.title{
-	color: #fff;
-	font-size: 20px;
+.title {
+  color: #fff;
+  font-size: 20px;
 }
----------------------------
-body{
-	margin:0;
-	padding:0;
-	background:#262626;
-	font-family: sans-serif;
+body {
+  margin: 0;
+  padding: 0;
+  background: #262626;
+  font-family: sans-serif;
 }
-.conta{
-	width: 1020px;
-	margin: 50px auto 0 ;
-	display: flex ;
-	 
-	flex-wrap: wrap;
-} 
+.conta {
+  width: 1020px;
+  margin: 50px auto 0;
+  display: flex;
 
-.conta .box{
-	position: relative;
-	width: 900px;
-	height: 300px;
-	background: #ff0;
-	margin: 50px;
-	box-sizing: border-box;
-	display: inline-block;
+  flex-wrap: wrap;
+}
+
+.conta .box {
+  position: relative;
+  width: 900px;
+  height: 300px;
+  background: #ff0;
+  margin: 50px;
+  box-sizing: border-box;
+  display: inline-block;
 }
 
 .conta .box .imgbox {
-	position: relative;
-	overflow: hidden;
-} 
- 
+  position: relative;
+  overflow: hidden;
+}
+
 .conta .box .imgbox img {
-	max-width: 100%;
-	transition: transform 2s;
+  max-width: 100%;
+  transition: transform 2s;
 }
 
-.conta .box:hover .imgbox img{
-	transform:scale(1.2);
+.conta .box:hover .imgbox img {
+  transform: scale(1.2);
 }
 
-.conta .box .deta{
-	position: absolute;
-	top:10px;
-	bottom:10px;
-	left:10px;
-	right:10px;
-	background:(0,0,0,0.8);
-	transform: scaley(0);
-	transition:transform 0.5s;
+.conta .box .deta {
+  position: absolute;
+  top: 10px;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+  background: (0, 0, 0, 0.8);
+  transform: scaley(0);
+  transition: transform 0.5s;
 }
 
-.conta .box:hover .deta{
-	transform: scaley(1);
+.conta .box:hover .deta {
+  transform: scaley(1);
 }
 
-.conta .box .deta .conte{
-	position:absolute;
-	top:20%;
-	transform:tranlatey(-50%);
-	text-align:center;
-	padding:15px;
-	color: #BDCBD1;---------------------------------------
+.conta .box .deta .conte {
+  position: absolute;
+  top: 20%;
+  transform: tranlatey(-50%);
+  text-align: center;
+  padding: 15px;
+  color: #bdcbd1;
 }
-.conta .box .deta .conte h4 h6{
-	margin:0;
-	padding:0;
-	font-size:20px
-	 
+.conta .box .deta .conte h4 h6 {
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
 }
-.conta .box .deta .conte p{
-	margin:10px 0 0;
-	padding:0; 
+.conta .box .deta .conte p {
+  margin: 10px 0 0;
+  padding: 0;
 }
 
-.vid{
-	  margin: 0 auto;
-     
+.vid {
+  margin: 0 auto;
 }
 
 .center {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
-
-
-
-
-
-
-
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+footer {
+  font-size: 15px;
+  text-align: center;
+  color: rgb(108, 66, 4);
+  background-color: rgba(204, 100, 30, 0.544);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
