--- a/css/style.css
+++ b/css/style.css
@@ -1,105 +1,101 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: Century Gothic;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Century Gothic;
 }
 
-header{
-	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../pic/2.jpg);
-	height: 100vh;
-	background-size: cover;
-	background-position: center;
+header {
+  background:rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.87)
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
+#myVideo {
+  background-size: cover;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -100;
 }
 
-ul{
-	list-style-type: none;
-	float: right;
-	margin-top: 25px;
+ul {
+  list-style-type: none;
+  float: right;
+  margin-top: 25px;
 }
 
-ul li{
-	display: inline-block;
+ul li {
+  display: inline-block;
 }
 
-ul li a{
-	text-decoration: none;
-	color: #fff;
-	padding: 5px 20px;
-	border: 1px solid transparent;
-	transition: 0.6s;
+ul li a {
+  text-decoration: none;
+  color: #fff;
+  padding: 5px 20px;
+  border: 1px solid transparent;
+  transition: 0.6s;
 }
 
-ul li  :hover{
-	background-color: #fff;
-	color: #000;
+ul li :hover {
+  background-color: #fff;
+  color: #000;
 }
 
 ul li.active a {
-	background-color: #fff;
-	color: #000;
+  background-color: #fff;
+  color: #000;
 }
 
-.logo img{
-	float: left;
-	width: 150px;
-	height: auto;
-	margin-top: 25px;
+ {
 }
 
-.main{
-	max-width: 1200px;
-	margin: auto;
-	font-size: 20px;
+.logo img {
+  float: left;
+  width: 200px;
+  height: auto;
+  margin-top: -25px;
 }
 
-.title{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
+.main {
+  max-width: 1200px;
+  margin: auto;
+  font-size: 20px;
 }
 
-.title{
-	color: #fff;
-	font-size: 20px;
+.title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.button{
-    position: absolute;
-	top: 62%;
-	left: 50%;
-	transform: translate(-50%,-50%);
+.title {
+  color: #fff;
+  font-size: 20px;
 }
 
-.btn{
-	border: 1px solid #fff;
-	padding: 10px 30px;
-	color:#fff;
-	text-decoration: none;
-	transition: 0.6s ease; 
+.button {
+  position: absolute;
+  top: 62%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.btn:hover{
-	background-color:#fff;
-	color:#000;
+.btn {
+  border: 1px solid #fff;
+  padding: 10px 30px;
+  color: #fff;
+  text-decoration: none;
+  transition: 0.6s ease;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
+.btn:hover {
+  background-color: #fff;
+  color: #000;
+}
+h4 {
+  font-family: monospace;
+  font-weight: lighter;
+}
