--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,16 @@
   margin: 0;
   padding: 0;
   font-family: Century Gothic;
+  box-sizing: border-box;
+ 
 }
 
 header {
-  background:rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.87)
+  background:rgba((0, 0, 0, 0.5), rgba(0, 0, 0, 0.87));
   height: 100vh;
   background-size: cover;
   background-position: center;
-}
+ }
 #myVideo {
   background-size: cover;
   position: fixed;
@@ -53,22 +55,36 @@ ul li.active a {
 
 .logo img {
   float: left;
-  width: 200px;
+  width: 150px;
   height: auto;
-  margin-top: -25px;
+  margin-top: -0px;
+  align-items: center;
+  
+
 }
 
 .main {
   max-width: 1200px;
   margin: auto;
   font-size: 20px;
+  display:flex;
+  justify-content:space-around;
+  min-width: 8vh;
+   
 }
-
+.niv{
+display: inline-flexbox;
+padding: 40px;
+margin: 10px;
+align-items: center;
+}
 .title {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  padding: 40px;
+margin: 10px;
 }
 
 .title {
@@ -78,9 +94,11 @@ ul li.active a {
 
 .button {
   position: absolute;
-  top: 62%;
+  top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  
 }
 
 .btn {
